# evo

./: .gitignore  CMakeLists.txt  Makefile  README.md  _sync_wait.hpp  cmake_install.cmake  compile_commands.json  exception.h  optional.h  tuple.h  type_traits.h  utility.h
include/: __tuple.h  concepts.h  coroutine.h  debug.h  exception.h  expected  expected.hpp  future.h  memory.h  optional.hpp  streambuf.hpp  tuple.h  type_traits.h  unexpcted  variant.h
include/coroutine/: _task.hpp  concepts.hpp  generator.h  io_scheduler.hpp  static_thread_pool.hpp  sync_wait.hpp  task.hpp
include/coroutine/detail/: epoll.hpp  ev_watcher.hpp  io_scheduler.cpp
include/evo/: __tuple  _hash_table  concepts  concepts.h  debug  exception  execution  execution.h  expected  expected.hpp  functional.h  future  future.h  macros  optional  optional.h  optional.hpp  rc  result  slab  streambuf  string  tuple  type_name  type_name.h  type_traits  type_traits.h  types  types.h  unexpcted  unordered_map  utility  utility.h  variant
include/evo/_utility/: declval  exception_guard  forward  move  pair  swap  utility
include/evo/coroutine/: _task  concepts  concepts.hpp  context  coroutine  driver  exceptions  fd  generator  io_ops  io_scheduler  op  promise_base  promise_base.hpp  raw_task  runtime  scheduler  static_thread_pool  static_thread_pool.hpp  sync_wait  sync_wait.hpp  task  task.hpp  traits  traits.hpp  utilities  waker  when_all  when_all.hpp
include/evo/coroutine/__detail/: raw_task
include/evo/coroutine/__runtime/: raw_task
include/evo/functional/: functional  reference_wrapper  reference_wrapper.h
include/evo/lockfree/: queue  queue.hpp  stack
include/evo/memory/: allocator  allocator.h  allocator_arg_t  allocator_arg_t.h  allocator_traits  allocator_traits.h  compressed_pair  compressed_pair.hpp  memory  pointer_traits  pointer_traits.h  shared_ptr  unique_ptr  weak_ptr
include/evo/utility/: declval.h  swap.h
include/lockfree/: stack.hpp
include/memory/: allocator.h  allocator_traits.h  compressed_pair.hpp  pointer_traits.h  shared_ptr.hpp  unique_ptr.hpp
include/utility/: forward.h  pair.h  swap.h
memory/: allocator.h
src/: string.cpp
src/coroutine/: context.cpp  driver.cpp  io_ops.cpp  io_scheduler.cpp  runtime.cpp  static_thread_pool.cpp
src/coroutine/__detail/: common
src/coroutine/driver/: epoll.cpp
src/coroutine/net/: listener.cpp  stream.cpp
test/: CMakeLists.txt  coro_server.cpp  coro_test.cpp  coroutine_test.cpp  execution.cpp  shared_ptr_test.cpp  slab_test.cpp  string_test.cpp  test1.cpp
test/containers/um/: count.cpp
test/coroutine/net/: echo_client.cpp  echo_server.cpp  wrk_server.cpp
test/memory/: shared_ptr_Y.cpp  shared_ptr_Y_rv.cpp  shared_ptr_array_unbound.cpp  shared_ptr_race.cpp  shared_ptr_rv.cpp  shared_ptr_test1.cpp  shared_ptr_test2.cpp
utility/: declval.h  forward.h  move.h
(+3 files in other folders)
